--- a/experiment_1_determining_the_density_of_a_liquid____interactive.html
+++ b/experiment_1_determining_the_density_of_a_liquid____interactive.html
@@ -75,4 +75,4 @@
 </div>
 <footer id="siteFooter"><a href="https://www.depaul.edu/Pages/default.aspx">DePaul University</a> Department of Chemistry and Biochemistry<br>
 <a href="https://kahveci.pw"><img src="https://kahveci.pw/images/logo.svg" alt="kahveci group" width="41" height="39" /></a></footer></div>
-<script type="text/javascript" src="_cedec_js.js"></script></body></html>
+<script type="text/javascript" src="cedec_js.js"></script></body></html>
