--- a/index.html
+++ b/index.html
@@ -15,25 +15,25 @@
 <script type="text/javascript" src="common_i18n.js"></script>
 <script type="text/javascript" src="common.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-	CHE 131 ▹ Interactive</head>
-<body class="exe-web-site exe-search-bar" id="exe-node-0"><script type="text/javascript">document.body.className+=" js"</script>
+	<a href="https://kahveci.pw"><img src="https://kahveci.pw/images/logo.svg" alt="kahveci group" width="24" /></a> CHE 131 ▹ Interactive</head>
+<body class="exe-web-site" id="exe-node-0"><script type="text/javascript">document.body.className+=" js"</script>
 <div id="content">
 <p id="skipNav"><a href="#main" class="sr-av">Skip navigation</a></p>
 <header id="header" ><div id="headerContent">General Chemistry Lab 1</div></header>
 <nav id="siteNav">
 <ul>
-   <li id="active"><a href="index.html" class="active daddy main-node">CHE 131. General Chemistry Lab I</a></li>
-   <li><a href="experiment_1_determining_the_density_of_a_liquid____interactive.html" class="no-ch">Experiment 1. Determining the Density of a Liquid  ▹  Interactive</a></li>
+   <li id="active"><a href="index.html" class="active daddy main-node">General Chemistry Lab I  ▹  Interactive</a></li>
+   <li><a href="experiment_1_determining_the_density_of_a_liquid.html" class="no-ch">Experiment 1. Determining the Density of a Liquid</a></li>
 </ul>
 </nav>
 <div id='topPagination'>
 <nav class="pagination noprt">
-<span class="page-counter">Page <strong>1</strong> of <strong>2</strong></span> <span class="sep">| </span><a href="experiment_1_determining_the_density_of_a_liquid____interactive.html" class="next"><span>Next<span> &raquo;</span></span></a>
+<span class="page-counter">Page <strong>1</strong> of <strong>2</strong></span> <span class="sep">| </span><a href="experiment_1_determining_the_density_of_a_liquid.html" class="next"><span>Next<span> &raquo;</span></span></a>
 </nav>
 </div>
 <div id="main-wrapper">
 <section id="main">
-<header id="nodeDecoration"><h1 id="nodeTitle">CHE 131. General Chemistry Lab I</h1></header>
+<header id="nodeDecoration"><h1 id="nodeTitle">General Chemistry Lab I  ▹  Interactive</h1></header>
 <article class="iDevice_wrapper textIdevice" id="id9">
 <div class="iDevice emphasis0" >
 <div id="ta9_110_2" class="block iDevice_content">
@@ -46,9 +46,9 @@
 </div>
 <div id='bottomPagination'>
 <nav class="pagination noprt">
-<span class="page-counter">Page <strong>1</strong> of <strong>2</strong></span> <span class="sep">| </span><a href="experiment_1_determining_the_density_of_a_liquid____interactive.html" class="next"><span>Next<span> &raquo;</span></span></a>
+<span class="page-counter">Page <strong>1</strong> of <strong>2</strong></span> <span class="sep">| </span><a href="experiment_1_determining_the_density_of_a_liquid.html" class="next"><span>Next<span> &raquo;</span></span></a>
 </nav>
 </div>
-<footer id="siteFooter"><a href="https://www.depaul.edu/Pages/default.aspx">DePaul University</a> Department of Chemistry and Biochemistry<br>
-<a href="https://kahveci.pw"><img src="https://kahveci.pw/images/logo.svg" alt="kahveci group" width="41" height="39" /></a></footer></div>
+<footer id="siteFooter">Department of Chemistry and Biochemistry<br>
+<a href="https://www.depaul.edu/Pages/default.aspx"><img src="https://kahveci.pw/images/courses/depaul-university.png" alt="kahveci group" width="120" /></a></footer></div>
 <script type="text/javascript" src="cedec_js.js"></script></body></html>
